# mailAlfred

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: README.md  architecture.md  cicd.md  cli-reference.md  contributing.md  extending.md  getting-started.md  gmail-setup.md  labels.md  llm-setup.md  troubleshooting.md
docs/plans/: 2026-03-01-classification-taxonomy-implementation.md  2026-03-01-classification-taxonomy-redesign.md  2026-03-04-duckdb-email-cache-design.md  2026-03-04-duckdb-email-cache-implementation.md  2026-03-04-gmail-connector-design.md  2026-03-04-gmail-connector-implementation.md
prompts/: CLASSIFICATION_PROMPT.j2  CLASSIFICATION_PROMPT.md  calendar_agent.j2  email_triage.j2  todoist_agent.j2  triage.j2
prompts/triage/: _email_context.j2  calendar_agent_instructions.j2  email_representation.j2  main_agent_instructions.j2  main_triage_input.j2  subagent_input.j2  todoist_agent_instructions.j2
scripts/: classify_batch.py  deploy.sh  full_sync.py  inspect_inbox.py  run_todoist_mcp.sh  test_agents.py
src/: labels.py  main.py  models.py  pipeline.py  sync.py
src/agents/: __init__.py  agent.py  calendar.py  context.py  todoist.py  triage.py
src/cache/: __init__.py  email_cache.py
src/connectors/: __init__.py  calendar.py  gmail.py  gmail_connector.py  todoist.py
src/models/: classified_email.py  email.py
src/utils/: gog_email.py  inference.py  prompts.py  template_utils.py  todoist_mcp.py
tests/: test_email_cache.py  test_gmail_connector.py  test_models.py  test_sync.py
