[project]
name = "mailalfred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.14.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "diskcache>=5.6.0",
    "tenacity>=8.0.0",
    "rich>=14.2.0",
    "loguru>=0.7.3",
    "jinja2>=3.1.6",
    "openai-agents>=0.10.3",
    "todoist-api-python>=3.2.1",
    "beautifulsoup4>=4.13.5",
]
